Add Reddit clone to the list of examples.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -336,6 +336,51 @@ use:
         <div class="col-sm-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
+                    Lightweight clone of Reddit using Laravel
+                </div>
+                <div class="panel-body">
+                    Small Laravel application implementing Reddit's basic
+                    functionality.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/readit"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                    <a
+                        href="https://travis-ci.org/MontealegreLuis/readit"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://travis-ci.org/MontealegreLuis/readit.svg?branch=master"
+                            alt="Build Status"
+                        >
+                    </a>
+                    <a
+                        href="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4/mini.png"
+                            alt="SensioLabsInsight"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
                     Fitbit API integration with Laravel
                 </div>
                 <div class="panel-body">
