--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,5 +1,15 @@
+@font-face {
+    font-family: bebas;
+    src: url('/fonts/bebas.ttf');
+}
+
+@font-face {
+    font-family: valera;
+    src: url('/fonts/valera-round.otf');
+}
+
 body {
-    font-family: 'Raleway', sans-serif;
+    font-family: valera, sans-serif;
     font-size: 1.6em;
 }
 
@@ -13,6 +23,11 @@ pre {
 code {
     word-wrap: normal !important;
     white-space: pre !important;
+}
+
+
+h1, h2, h3, h4, h5 {
+    font-family: bebas, sans-serif;
 }
 
 .link-icon:hover {
