--- a/source/css/style.css
+++ b/source/css/style.css
@@ -11,6 +11,7 @@
 body {
     font-family: valera, sans-serif;
     font-size: 1.6em;
+    background-color: #e6e7e8;
 }
 
 pre {
@@ -25,9 +26,24 @@ code {
     white-space: pre !important;
 }
 
-
 h1, h2, h3, h4, h5 {
     font-family: bebas, sans-serif;
+    color: #00a79d;
+}
+
+a, a:hover {
+    color: #00a79d;
+}
+
+.panel-primary {
+    border-color: #00a79d;
+}
+
+.panel-primary > .panel-heading,
+.btn-primary,
+.btn-primary:hover {
+    background-color: #00a79d;
+    border-color: #00a79d;
 }
 
 .link-icon:hover {
@@ -63,7 +79,7 @@ h1, h2, h3, h4, h5 {
 }
 
 footer {
-    background-color: #4CB2ED;
+    background-color: #00a79d;
     bottom: 0;
     height: 3em;
     position: fixed;
@@ -75,8 +91,6 @@ footer {
 
 pre, code {
     background: #fdf6e3;
-    font-family: monospace;
-    font-size: 0.9em;
 }
 
 @media (min-width: 980px) {
