--- a/source/_views/comments.html.twig
+++ b/source/_views/comments.html.twig
@@ -2,7 +2,7 @@
 <html>
 <head lang="es-mx">
     {% include 'components/head.html.twig' %}
-    <link rel="stylesheet" href="/components/highlightjs/styles/solarized_light.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/default.min.css" />
 </head>
 <body>
     <header class="navigation">
@@ -25,9 +25,8 @@
         {% include 'components/footer.html.twig' %}
     </footer>
 
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="/components/highlightjs/highlight.pack.js"></script>
+    {% include 'components/scripts.html.twig' %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     {% include 'components/analytics.html.twig' %}
 </body>
