--- a/source/_views/index.html.twig
+++ b/source/_views/index.html.twig
@@ -21,9 +21,7 @@
         {% include 'components/footer.html.twig' %}
     </footer>
 
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js">
-    </script>
+    {% include 'components/scripts.html.twig' %}
     {% include 'components/comments.html.twig' %}
     {% include 'components/analytics.html.twig' %}
 </body>
