Change background image in home page.

--- a/source/_views/index.html.twig
+++ b/source/_views/index.html.twig
@@ -9,10 +9,14 @@
     </header>
 
     <div class="image-bg-fixed-height">
-        <div class="container welcome">
-            ¡Bienvenid@!
+        <div class="container">
+            <div class="welcome">
+                <h1>Luis Montealegre</h1>
+                <h2>Desarrollador Web</h2>
+            </div>
         </div>
     </div>
+
     <div class="content container">
         {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
     </div>
