--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: static
 title: Portfolio
 use:
 - posts_categories
@@ -29,8 +29,11 @@ use:
             </p>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">Slim 2 modules</div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
+                    Slim 2 modules
+                </div>
                 <div class="panel-body">
                     <p>
                         This package introduces Service and Controller providers
@@ -74,8 +77,11 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">DBAL fixtures</div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <i class="devicon-doctrine-plain"></i>
+                    DBAL fixtures
+                </div>
                 <div class="panel-body">
                     <p>
                         This package allows you to define simple data fixture
@@ -120,8 +126,9 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
                     Easy forms
                 </div>
                 <div class="panel-body">
@@ -166,8 +173,9 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-docker-plain"></i>
                     Docker container with PHP 7
                 </div>
                 <div class="panel-body">
@@ -203,8 +211,9 @@ use:
     </p>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-java-plain"></i>
                     Hibernate example
                 </div>
                 <div class="panel-body">
@@ -247,8 +256,9 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-java-plain"></i>
                     Web application with Servlets example
                 </div>
                 <div class="panel-body">
@@ -291,8 +301,9 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
                     PHP testing tools
                 </div>
                 <div class="panel-body">
@@ -334,8 +345,9 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-laravel-plain"></i>
                     Lightweight clone of Reddit using Laravel
                 </div>
                 <div class="panel-body">
@@ -379,8 +391,9 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-laravel-plain"></i>
                     Fitbit API integration with Laravel
                 </div>
                 <div class="panel-body">
@@ -409,8 +422,9 @@ use:
     </h2>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
                     Composer workshop
                 </div>
                 <div class="panel-body">
@@ -432,8 +446,9 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-symfony-original"></i>
                     Symfony 2 workshop
                 </div>
                 <div class="panel-body">
@@ -464,8 +479,9 @@ use:
     </h2>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
                     TDD 101
                 </div>
                 <div class="panel-body">
@@ -492,8 +508,9 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
                     An overview of testing libraries in PHP
                 </div>
                 <div class="panel-body">
@@ -522,8 +539,9 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <i class="devicon-php-plain"></i>
                     Slim 2 workshop
                 </div>
                 <div class="panel-body">
