--- a/source/_views/static.html.twig
+++ b/source/_views/static.html.twig
@@ -2,6 +2,7 @@
 <html>
 <head lang="es-mx">
     {% include 'components/head.html.twig' %}
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 </head>
 <body>
     <header class="navigation">
@@ -10,11 +11,8 @@
 
     <div class="content container">
         <div class="row">
-            <div class="col-sm-9">
+            <div class="col-sm-12">
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
-            </div>
-            <div class="col-sm-3 sidebar">
-                {% include 'components/sidebar.html.twig' %}
             </div>
         </div>
     </div>
@@ -26,5 +24,5 @@
     {% include 'components/scripts.html.twig' %}
     {% include 'components/analytics.html.twig' %}
     {% include 'components/comments.html.twig' %}
-</body>
+    </body>
 </html>
