--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -29,7 +29,7 @@ use:
             </p>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
                     Slim 2 modules
@@ -77,7 +77,7 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-doctrine-plain"></i>
                     DBAL fixtures
@@ -126,7 +126,7 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
                     Easy forms
@@ -173,7 +173,7 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-docker">
                 <div class="panel-heading">
                     <i class="devicon-docker-plain"></i>
                     Docker container with PHP 7
@@ -204,14 +204,14 @@ use:
 <section>
     <h2>
         <i class="fa fa-bookmark" aria-hidden="true"></i>
-        Examples
+        Applications
     </h2>
     <p>
-       These are some repositories with code samples.
+       These are some repositories with small applications and code samples.
     </p>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-java">
                 <div class="panel-heading">
                     <i class="devicon-java-plain"></i>
                     Hibernate example
@@ -256,7 +256,7 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-java">
                 <div class="panel-heading">
                     <i class="devicon-java-plain"></i>
                     Web application with Servlets example
@@ -301,7 +301,7 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
                     PHP testing tools
@@ -345,7 +345,7 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-laravel-plain"></i>
                     Lightweight clone of Reddit using Laravel
@@ -391,7 +391,58 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
+                <div class="panel-heading">
+                    <i class="devicon-zend-plain"></i>
+                    Custom CMS using ZF1
+                </div>
+                <div class="panel-body">
+                    This is a small custom CMS written in ZF1 for a Real Estate
+                    Consulting Company.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://bitbucket.org/MontealegreLuis/edeco"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="panel panel-php">
+                <div class="panel-heading">
+                    <i class="devicon-zend-plain"></i>
+                    Small catalog of products using ZF1 and ZF2
+                </div>
+                <div class="panel-body">
+                    This is a small catalog of products using ZF1. Where you can
+                    find some of my experiments on integrating more modern
+                    components, like ZF2's service manager, phpspec and Twig.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://bitbucket.org/MontealegreLuis/agata"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-laravel-plain"></i>
                     Fitbit API integration with Laravel
@@ -413,6 +464,50 @@ use:
                 </div>
             </div>
         </div>
+        <div class="col-sm-6">
+            <div class="panel panel-js">
+                <div class="panel-heading">
+                    <i class="devicon-javascript-plain"></i>
+                    Simple Simon game
+                </div>
+                <div class="panel-body">
+                    This is a Simple Simon Game written with vanilla JS using
+                    TDD.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/simple-simon"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                    <a
+                        href="https://travis-ci.org/MontealegreLuis/simple-simon"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://travis-ci.org/MontealegreLuis/simple-simon.svg?branch=master"
+                            alt="Build Status"
+                        >
+                    </a>
+                    <a
+                        href="https://codebeat.co/projects/github-com-montealegreluis-simple-simon"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://codebeat.co/badges/fc41b73e-e111-4349-bc44-6eb913087c40"
+                            alt="codebeat badge"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <section>
@@ -422,7 +517,7 @@ use:
     </h2>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
                     Composer workshop
@@ -446,7 +541,7 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-symfony-original"></i>
                     Symfony 2 workshop
@@ -479,10 +574,10 @@ use:
     </h2>
     <div class="row">
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
-                    TDD 101
+                    TDD 101 <small>(spanish)</small>
                 </div>
                 <div class="panel-body">
                     <div class="media">
@@ -508,10 +603,10 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
-                    An overview of testing libraries in PHP
+                    An overview of testing libraries in PHP <small>(spanish)</small>
                 </div>
                 <div class="panel-body">
                     <div class="media">
@@ -539,10 +634,10 @@ use:
     </div>
     <div class="row">
         <div class="col-sm-12">
-            <div class="panel panel-primary">
+            <div class="panel panel-php">
                 <div class="panel-heading">
                     <i class="devicon-php-plain"></i>
-                    Slim 2 workshop
+                    Slim 2 workshop <small>(spanish)</small>
                 </div>
                 <div class="panel-body">
                     <div class="media">
