Move some text from the home page to the blog home page.

--- a/source/index.html.twig
+++ b/source/index.html.twig
@@ -7,114 +7,83 @@ title: ¿Quién soy?
         <h1>¡Hola!</h1>
         <p>
             Mi nombre es Luis Montealegre Vázquez y soy un <strong>Desarrollador
-            Web</strong>, egresado de la <strong>Maestría en Ciencias de la 
-            Computación</strong> en la 
+            Web</strong>, egresado de la <strong>Maestría en Ciencias de la
+            Computación</strong> en la
             <a href="http://www.cs.buap.mx/" target="_blank" rel="noopener">
                 BUAP
             </a>
-            donde hice un poco de 
-            <a 
+            donde hice un poco de
+            <a
                 href="http://link.springer.com/chapter/10.1007%2F978-3-540-74459-7_13#page-1"
-                target="_blank" 
+                target="_blank"
                 rel="noopener"
             >
                 investigación
-            </a>. 
+            </a>.
         </p>
         <p>
             Desde el 2005 empecé a desarrollar aplicaciones Web en empresas como
-            <a 
-                href="http://www.cfe.gob.mx/paginas/home.aspx" 
-                target="_blank" 
+            <a
+                href="http://www.cfe.gob.mx/paginas/home.aspx"
+                target="_blank"
                 rel="noopener"
             >
                 CFE
-            </a>, 
+            </a>,
             <a href="http://www.ellucian.com/" target="_blank" rel="noopener">
                 Ellucian
-            </a>, 
+            </a>,
             <a href="http://www.biconsulting.mx/" target="_blank" rel="noopener">
                 Bic Consulting
-            </a>, 
+            </a>,
             <a href="http://www.digizent.com/" target="_blank" rel="noopener">
                 Digizent International
-            </a> 
+            </a>
             y como <strong>consultor independiente</strong>.
         </p>
         <p>
-            Durante estos <strong>11 años</strong> he trabajado con varios 
+            Durante estos <strong>11 años</strong> he trabajado con varios
             lenguajes de programación, principalmente:
         </p>
         <ul>
-            <li>PHP</li> 
-            <li>Java</li> 
-            <li>C#</li> 
+            <li>PHP</li>
+            <li>Java</li>
+            <li>C#</li>
         </ul>
         <p>
-            Durante casi el mismo periodo he trabajado para más de 10 
-            universidades (BUAP, 
+            Durante casi el mismo periodo he trabajado para más de 10
+            universidades (BUAP,
             <a href="http://www.uvp.mx/" target="_blank" rel="noopener">
                 UVP
-            </a>, e ITP, entre otras), como profesor por asignatura, en varias 
+            </a>, e ITP, entre otras), como profesor por asignatura, en varias
             materias de programación.
         </p>
         <p>
-            En julio de 2012, con el apoyo de muchos amig@s, comienzo a 
+            En julio de 2012, con el apoyo de muchos amig@s, comienzo a
             organizar el
-            <a 
-                href="http://www.comunidadphppuebla.com" 
-                target="_blank" 
+            <a
+                href="http://www.comunidadphppuebla.com"
+                target="_blank"
                 rel="noopener"
             >
                 Grupo de usuarios PHP en Puebla
-            </a>. 
+            </a>.
         </p>
         <p>
-            En enero de 2016 me mudé a <strong>San Antonio Texas</strong> a 
-            empezar una nueva aventura con mi familia, como instructor, por 
-            primera vez de tiempo completo, en 
+            En enero de 2016 me mudé a <strong>San Antonio Texas</strong> a
+            empezar una nueva aventura con mi familia, como instructor, por
+            primera vez de tiempo completo, en
             <a href="http://codeup.com/about/" target="_blank" rel="noopener">
                 Codeup
             </a>.
-        </p>
-        <h2>¿De qué trata este blog?</h2>
-        
-        <p>
-            Si te animas a conocerme un poco sabrás que me encanta pasar el 
-            tiempo <strong>aprendiendo</strong>, últimamente me la paso leyendo 
-            sobre diseño orientado a objetos, metodologías ágiles, 
-            <a 
-                href="http://es.wikipedia.org/wiki/Desarrollo_guiado_por_pruebas"
-                target="_blank"
-                rel="noopener"
-            >
-                TDD
-            </a>, 
-            <a 
-                href="http://en.wikipedia.org/wiki/Behavior-driven_development"
-                target="_blank"
-                rel="noopener"
-            >
-                BDD
-            </a>, 
-            <a 
-                href="http://es.wikipedia.org/wiki/Dise%C3%B1o_guiado_por_el_dominio"
-                target="_blank"
-                rel="noopener"
-            >
-                DDD
-            </a> y educación. Este blog tiene como objetivo compartir las cosas 
-            que voy aprendiendo al poner en práctica las cosas que me gusta leer. 
-            Los posts que encontrarás aquí son sobre estos temas aplicados al 
-            <strong>desarrollo Web</strong>.
         </p>
     </div>
     <div class="col-sm-6">
         <p>
             <figure class="text-center">
-                <img 
-                    src="/images/uncle-bob.jpg" 
-                    class="img-responsive img-rounded center-block" 
+                <img
+                    src="/images/uncle-bob.jpg"
+                    class="img-responsive img-rounded center-block"
                     alt="Con Uncle Bob"
                     title="Con Uncle Bob"
                 >
@@ -123,9 +92,9 @@ title: ¿Quién soy?
         </p>
         <p>
             <figure class="text-center">
-                <img 
-                    src="/images/eric-evans.jpg" 
-                    class="img-responsive img-rounded center-block" 
+                <img
+                    src="/images/eric-evans.jpg"
+                    class="img-responsive img-rounded center-block"
                     alt="Con Eric Evans"
                     title="Con Eric Evans"
                 >
@@ -136,32 +105,36 @@ title: ¿Quién soy?
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-6">
+        <br>
+        <img
+            src="/images/comunidad.jpg"
+            class="img-responsive img-rounded center-block"
+            alt="Amigos comunidad"
+        >
+    </div>
+    <div class="col-sm-6">
         <h2>Algo más personal :)</h2>
-        
         <p>
             Fuera de mi trabajo me gusta pasar tiempo con mi esposa (Meri) y mis dos
             hijos (Mario de 5 años y Alejandro de 3). Soy fan del café cargado y sin
             azucar, de la pizza, el sushi, la cerveza oscura y de las películas de
             ciencia ficción.
         </p>
-        
-        <img 
-            src="/images/comunidad.jpg" 
-            class="img-responsive img-rounded center-block" 
-            alt="Amigos comunidad"
-        >
-        
+
         <h2>¿Puedo hacer algo por ti?</h2>
-        
         <p>
             Puedes ponerte en contacto conmigo a través de cualquiera de las redes
             sociales que ves en el menú del sitio o por correo, ya sea para trabajar
             en algo juntos o para que me platiques de lo que quieras.
         </p>
-        
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-sm-12">
         <blockquote class="thanks">
-            <p class="lead">
+            <p class="lead text-center">
                 Muchas gracias por leer hasta aquí y <strong>vuelve las veces que
                 quieras</strong>.
             </p>
