Add links to codebeat and Travis in the spring application.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -36,6 +36,26 @@ use:
                             alt="license"
                         >
                     </a>
+                    <a
+                        href="https://travis-ci.org/MontealegreLuis/spring-blog"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://travis-ci.org/MontealegreLuis/spring-blog.svg?branch=master"
+                            alt="Build Status"
+                        >
+                    </a>
+                    <a
+                        href="https://codebeat.co/projects/github-com-montealegreluis-spring-blog-master"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://codebeat.co/badges/cb353c07-f5f0-4862-a7f1-419008e1c40b"
+                            alt="codebeat badge"
+                        >
+                    </a>
                 </div>
             </div>
         </div>
