--- a/source/index.html.twig
+++ b/source/index.html.twig
@@ -4,7 +4,7 @@ title: ¡Hola!
 ---
 <article class="row">
     <div class="col-sm-12">
-        <header class="page-header"><h1> ¡Hola!</h1></header>
+        <header><h1 class="title"> ¡Hola!</h1></header>
     </div>
     <div class="col-sm-6">
         <p>
