--- a/source/_views/index.html.twig
+++ b/source/_views/index.html.twig
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class="content container">
+    <div class="content">
         {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
     </div>
 
