--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,59 @@ h1, h2, h3, h4, h5 {
     color: #00a79d;
 }
 
+.title {
+    overflow: hidden;
+}
+
+.title:after {
+    content:"";
+    display: inline-block;
+    height: 0.5em;
+    vertical-align: bottom;
+    width: 100%;
+    margin-right: -100%;
+    margin-left: 10px;
+    border-top: 3px solid #00a79d;
+}
+
+.highlight {
+    background-color: #00a79d;
+    overflow: auto;
+    color: #fff;
+    clear: both;
+}
+
+.contact {
+    word-spacing: .5em;
+    line-height: 96px;
+    text-align: center;
+    min-height: 96px;
+    margin-bottom: 1em;
+    overflow: auto;
+}
+
+.contact a {
+    text-decoration: none;
+    border: 3px solid #00a79d;
+    display: inline-block;
+    margin-top: 10px;
+    padding-left: 15px;
+    margin-bottom: 0;
+}
+
+.contact a:hover {
+    background-color: #D8D9DA;
+}
+
+figcaption {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+blockquote {
+    border-style: none;
+}
+
 a, a:hover {
     color: #00a79d;
 }
