--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ h1, h2, h3, h4, h5 {
 
 .title {
     overflow: hidden;
+    margin-bottom: 1em;
 }
 
 .title:after {
@@ -47,10 +48,12 @@ h1, h2, h3, h4, h5 {
 }
 
 .highlight {
+    margin-top: 1.5em;
     background-color: #00a79d;
     overflow: auto;
     color: #fff;
     clear: both;
+    padding-bottom: .7em;
 }
 
 .contact {
@@ -88,8 +91,17 @@ a, a:hover {
     color: #00a79d;
 }
 
-.panel-primary {
-    border-color: #00a79d;
+.panel-primary small {
+    color: #e6e7e8;
+}
+
+.panel-primary h2,
+.panel-primary .title {
+    color: #fff;
+}
+
+.panel-primary .title:after {
+    border-top: 3px solid #fff;
 }
 
 .panel-heading {
