--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -4,14 +4,14 @@ title: Portfolio
 use:
 - posts_categories
 ---
-<header class="page-header">
-    <h1>
+<header>
+    <h1 class="title">
         <i class="fa fa-briefcase" aria-hidden="true"></i>
         Portfolio
     </h1>
 </header>
 <section>
-    <h2 id="applications">
+    <h2 id="applications" class="title">
         <i class="fa fa-bookmark" aria-hidden="true"></i>
         Applications
     </h2>
@@ -362,7 +362,7 @@ use:
     </div>
 </section>
 <section>
-    <h2 id="libraries">
+    <h2 id="libraries" class="title">
         <i class="fa fa-dropbox"></i>
         Libraries
     </h2>
@@ -541,7 +541,7 @@ use:
     </div>
 </section>
 <section id="workshops">
-    <h2>
+    <h2 class="title">
         <i class="fa fa-code" aria-hidden="true"></i>
         Coding workshops
     </h2>
@@ -598,7 +598,7 @@ use:
     </div>
 </section>
 <section id="video">
-    <h2>
+    <h2 class="title">
         <i class="fa fa-video-camera" aria-hidden="true"></i>
         Video tutorials
     </h2>
