--- a/source/_views/post.html.twig
+++ b/source/_views/post.html.twig
@@ -2,7 +2,7 @@
 {% block content_wrapper %}
     <article>
         <header>
-            <div class="page-header"><h1>{{ page.title }}</h1></div>
+            <h1 class="title">{{ page.title }}</h1>
             <p>
                 <span class="glyphicon glyphicon-time"></span>
                 {{ page.date|localizeddate('long', 'none', 'es', 'America/Mexico_City', 'MMMM dd yyyy') }}&nbsp;
