--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -150,7 +150,7 @@ use:
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="panel panel-js">
+            <div class="panel panel-javascript">
                 <div class="panel-heading">
                     <i class="devicon-javascript-plain"></i>
                     Simple Simon game
