Add links to US and MX translations.

--- a/source/_views/en/index.html.twig
+++ b/source/_views/en/index.html.twig
@@ -5,7 +5,7 @@
 </head>
 <body class="home">
     <header class="navigation">
-        {% include 'components/menu.html.twig' %}
+        {% include 'components/en/menu.html.twig' %}
     </header>
 
     <div class="image-bg-fixed-height">
