--- a/source/_views/components/en/menu.html.twig
+++ b/source/_views/components/en/menu.html.twig
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Navegación</span>
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -14,16 +14,16 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/cv/">Curriculum</a></li>
-                    <li><a href="/portfolio/">Portafolio</a></li>
+                    <li><a href="/en/cv/">Curriculum</a></li>
+                    <li><a href="/en/portfolio/">Portfolio</a></li>
                     <li><a href="/blog/">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/">
-                        <span class="language language-current">MX</span>
+                        <span class="language">MX</span>
                     </a></li>
                     <li><a href="/en/">
-                        <span class="language">US</span>
+                        <span class="language language-current">US</span>
                     </a></li>
                     <li>
                         <a href="/atom.xml" class="link-icon">
