Translate blog's home page to english.

--- a/source/_views/components/en/menu.html.twig
+++ b/source/_views/components/en/menu.html.twig
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/" title="{{ site.title }}">
+                <a class="navbar-brand" href="/en/" title="{{ site.title }}">
                     <span class="glyphicon glyphicon-home"></span>
                 </a>
             </div>
@@ -16,7 +16,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/en/cv/">Curriculum</a></li>
                     <li><a href="/en/portfolio/">Portfolio</a></li>
-                    <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/en/blog/">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/">
