Translate blog's sidebar to english.

--- a/source/_views/en/default.html.twig
+++ b/source/_views/en/default.html.twig
@@ -14,7 +14,7 @@
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
             </div>
             <div class="col-sm-3 sidebar">
-                {% include 'components/sidebar.html.twig' %}
+                {% include 'components/en/sidebar.html.twig' %}
             </div>
         </div>
     </div>
