--- a/source/en/portfolio.html.twig
+++ b/source/en/portfolio.html.twig
@@ -30,6 +30,7 @@ use:
                         href="https://github.com/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -40,6 +41,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/spring-blog.svg?branch=master"
@@ -50,6 +52,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-spring-blog-master"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/cb353c07-f5f0-4862-a7f1-419008e1c40b"
@@ -75,6 +78,7 @@ use:
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -85,6 +89,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/hibernate-example.svg?branch=master"
@@ -95,6 +100,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/df70242a-a3d4-4367-8785-6703e4e243e6"
@@ -120,6 +126,7 @@ use:
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -130,6 +137,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/movies.svg?branch=master"
@@ -140,6 +148,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/9a9920f0-dbf3-4424-a5dc-e7d429870bdc"
@@ -164,6 +173,7 @@ use:
                         href="https://github.com/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -174,6 +184,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/simple-simon.svg?branch=master"
@@ -184,6 +195,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/fc41b73e-e111-4349-bc44-6eb913087c40"
@@ -210,6 +222,7 @@ use:
                         href="https://github.com/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -220,6 +233,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/php-testing-tools.svg?branch=master"
@@ -230,6 +244,7 @@ use:
                         href="https://codeclimate.com/github/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codeclimate.com/github/MontealegreLuis/php-testing-tools/badges/gpa.svg"
@@ -254,6 +269,7 @@ use:
                         href="https://github.com/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -264,6 +280,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/readit.svg?branch=master"
@@ -274,6 +291,7 @@ use:
                         href="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4/mini.png"
@@ -300,6 +318,7 @@ use:
                         href="https://bitbucket.org/MontealegreLuis/edeco"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -325,6 +344,7 @@ use:
                         href="https://bitbucket.org/MontealegreLuis/agata"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -350,6 +370,7 @@ use:
                         href="https://github.com/MontealegreLuis/fitbit-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -383,33 +404,36 @@ use:
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://travis-ci.org/ComPHPPuebla/slim-modules"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://travis-ci.org/ComPHPPuebla/slim-modules"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
-                                alt="Build Status"
+                            src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
+                            alt="Build Status"
                         >
                     </a>
                     <a
-                            href="https://packagist.org/packages/comphppuebla/slim-modules"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://packagist.org/packages/comphppuebla/slim-modules"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
-                                alt="License"
+                            src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
+                            alt="License"
                         >
                     </a>
                     <a
-                            href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -430,33 +454,36 @@ use:
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
-                                alt="Build Status"
+                            src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
+                            alt="Build Status"
                         >
                     </a>
                     <a
-                            href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
-                                alt="License"
+                            src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
+                            alt="License"
                         >
                     </a>
                     <a
-                            href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -479,33 +506,36 @@ use:
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://travis-ci.org/ComPHPPuebla/easy-forms"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://travis-ci.org/ComPHPPuebla/easy-forms"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
-                                alt="Build Status"
+                            src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
+                            alt="Build Status"
                         >
                     </a>
                     <a
-                            href="https://packagist.org/packages/comphppuebla/easy-forms"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://packagist.org/packages/comphppuebla/easy-forms"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
-                                alt="License"
+                            src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
+                            alt="License"
                         >
                     </a>
                     <a
-                            href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -526,13 +556,14 @@ use:
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://github.com/MontealegreLuis/php-container"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://github.com/MontealegreLuis/php-container"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
-                                alt="license"
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
                         >
                     </a>
                 </div>
@@ -561,6 +592,7 @@ use:
                         href="https://github.com/ComPHPPuebla/taller-composer"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -586,6 +618,7 @@ use:
                         href="https://github.com/ComPHPPuebla/sf2workshop"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -616,6 +649,7 @@ use:
                                 href="https://www.youtube.com/watch?v=2GuYLle45bw"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/2GuYLle45bw/2.jpg"
@@ -645,6 +679,7 @@ use:
                                 href="https://www.youtube.com/watch?v=6IH2Un35pb0"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/6IH2Un35pb0/2.jpg"
@@ -676,6 +711,7 @@ use:
                                 href="https://www.youtube.com/watch?v=P5s8Sydo154"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/P5s8Sydo154/2.jpg"
@@ -693,6 +729,7 @@ use:
                                 href="https://www.youtube.com/watch?v=iRDwfnKOKtk"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/iRDwfnKOKtk/2.jpg"
