--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -30,6 +30,7 @@ use:
                         href="https://github.com/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -40,6 +41,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/spring-blog"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/spring-blog.svg?branch=master"
@@ -50,6 +52,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-spring-blog-master"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/cb353c07-f5f0-4862-a7f1-419008e1c40b"
@@ -74,6 +77,7 @@ use:
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -84,6 +88,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/hibernate-example.svg?branch=master"
@@ -94,6 +99,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/df70242a-a3d4-4367-8785-6703e4e243e6"
@@ -119,6 +125,7 @@ use:
                         href="https://github.com/MontealegreLuis/hibernate-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -129,6 +136,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/movies.svg?branch=master"
@@ -139,6 +147,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-movies"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/9a9920f0-dbf3-4424-a5dc-e7d429870bdc"
@@ -163,6 +172,7 @@ use:
                         href="https://github.com/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -173,6 +183,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/simple-simon.svg?branch=master"
@@ -183,6 +194,7 @@ use:
                         href="https://codebeat.co/projects/github-com-montealegreluis-simple-simon"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codebeat.co/badges/fc41b73e-e111-4349-bc44-6eb913087c40"
@@ -209,6 +221,7 @@ use:
                         href="https://github.com/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -219,6 +232,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/php-testing-tools.svg?branch=master"
@@ -229,6 +243,7 @@ use:
                         href="https://codeclimate.com/github/MontealegreLuis/php-testing-tools"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://codeclimate.com/github/MontealegreLuis/php-testing-tools/badges/gpa.svg"
@@ -253,6 +268,7 @@ use:
                         href="https://github.com/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -263,6 +279,7 @@ use:
                         href="https://travis-ci.org/MontealegreLuis/readit"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/MontealegreLuis/readit.svg?branch=master"
@@ -273,6 +290,7 @@ use:
                         href="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b412e223-6012-472f-ad54-ba81fe85eca4/mini.png"
@@ -299,6 +317,7 @@ use:
                         href="https://bitbucket.org/MontealegreLuis/edeco"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -324,6 +343,7 @@ use:
                         href="https://bitbucket.org/MontealegreLuis/agata"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -349,6 +369,7 @@ use:
                         href="https://github.com/MontealegreLuis/fitbit-example"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -385,6 +406,7 @@ use:
                         href="https://travis-ci.org/ComPHPPuebla/slim-modules"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
@@ -395,6 +417,7 @@ use:
                         href="https://packagist.org/packages/comphppuebla/slim-modules"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
@@ -405,6 +428,7 @@ use:
                         href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
@@ -432,6 +456,7 @@ use:
                         href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
@@ -442,6 +467,7 @@ use:
                         href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
@@ -452,6 +478,7 @@ use:
                         href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
@@ -481,6 +508,7 @@ use:
                         href="https://travis-ci.org/ComPHPPuebla/easy-forms"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
@@ -491,6 +519,7 @@ use:
                         href="https://packagist.org/packages/comphppuebla/easy-forms"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
@@ -501,6 +530,7 @@ use:
                         href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
@@ -524,13 +554,14 @@ use:
                 </div>
                 <div class="panel-footer">
                     <a
-                            href="https://github.com/MontealegreLuis/php-container"
-                            target="_blank"
-                            rel="noopener"
+                        href="https://github.com/MontealegreLuis/php-container"
+                        target="_blank"
+                        rel="noopener"
+                        class="code-badge"
                     >
                         <img
-                                src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
-                                alt="license"
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
                         >
                     </a>
                 </div>
@@ -559,6 +590,7 @@ use:
                         href="https://github.com/ComPHPPuebla/taller-composer"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -583,6 +615,7 @@ use:
                         href="https://github.com/ComPHPPuebla/sf2workshop"
                         target="_blank"
                         rel="noopener"
+                        class="code-badge"
                     >
                         <img
                             src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
@@ -613,6 +646,7 @@ use:
                                 href="https://www.youtube.com/watch?v=2GuYLle45bw"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/2GuYLle45bw/2.jpg"
@@ -641,6 +675,7 @@ use:
                                 href="https://www.youtube.com/watch?v=6IH2Un35pb0"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/6IH2Un35pb0/2.jpg"
@@ -671,6 +706,7 @@ use:
                                 href="https://www.youtube.com/watch?v=P5s8Sydo154"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/P5s8Sydo154/2.jpg"
@@ -687,11 +723,12 @@ use:
                                 href="https://www.youtube.com/watch?v=iRDwfnKOKtk"
                                 target="_blank"
                                 rel="noopener"
+                                class="code-badge"
                             >
                                 <img
                                     src="http://i3.ytimg.com/vi/iRDwfnKOKtk/2.jpg"
                                     alt="Part 2"
-                               >
+                                >
                             </a>
                         </div>
                     </div>
