Fix typos, reword some sections.

--- a/source/en/index.html.twig
+++ b/source/en/index.html.twig
@@ -20,8 +20,8 @@ title: Howdy!
                     target="_blank"
                     rel="noopener"
                 >
-                    research
-                </a>.
+                    research.
+                </a>
             </p>
             <p>
                 Since 2005, I started developing web applications in companies such as
@@ -44,33 +44,34 @@ title: Howdy!
                 and as an <strong>independent consultant</strong>.
                 During these <strong>12 years</strong> I have worked with several
                 programming languages, mainly: <strong>PHP</strong>, <strong>Java</strong>
-                and <strong>C#</strong>
+                and <strong>C#</strong>.
             </p>
             <p>
-                I have also been a part-time professor in 10 universities in Puebla,
-                teaching about several programming topics. In July 2012, with the support of many
-                friends, we organized
+                I've also been a part-time professor at 10 universities in Puebla, teaching about
+                several programming topics. In July 2012, with the support of many friends, I
+                organized the
                 <a
                     href="http://www.comunidadphppuebla.com"
                     target="_blank"
                     rel="noopener"
                 >
-                    Puebla's PHP User Group
-                </a>.
+                    PHP Puebla User Group.
+                </a>
             </p>
         </div>
         <div class="col-sm-6">
             <p>
                 In January, 2016, I moved to <strong>San Antonio Texas</strong> to start a new
-                adventure with my family, as a full-time instructor for the first time, at Codeup
+                adventure with my family, as a full-time instructor for the first time, at
                 <a href="http://codeup.com/about/" target="_blank" rel="noopener">
-                    Codeup
-                </a>.
+                    Codeup.
+                </a>
             </p>
             <p>
-                In my spare time, I love to spend time with my wife (Meri) and my two children
-                (Mario and Alejandro, 5 and 3 years old respectively). I like coffee, pizza,
-                sushi, dark beer and science fiction movies.
+                I love to spend my spare time with my wife (<strong>Meri</strong>) and my two
+                children (<strong>Mario</strong> and <strong>Alejandro</strong>, 5 and 3 years old
+                respectively). Things I enjoy the most: coffee, pizza, sushi, dark beer and science
+                fiction movies.
             </p>
             <p>
                 <strong>You can contact me</strong> through the social network links on this site
