--- a/source/en/index.html.twig
+++ b/source/en/index.html.twig
@@ -62,7 +62,7 @@ title: Howdy!
         <div class="col-sm-6">
             <p>
                 In January, 2016, I moved to <strong>San Antonio Texas</strong> to start a new
-                adventure with my family, as a full-time instructor for the first time, at
+                adventure, with my family, as a full-time instructor for
                 <a href="http://codeup.com/about/" target="_blank" rel="noopener">
                     Codeup.
                 </a>
