feat: Update pdf version of CV
* Add link to CV to the spanish menu

--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -19,6 +19,11 @@
                     <li><a href="/blog/">Blog</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/cv-latest.pdf" title="Descargar CV">
+                            <img height="25px" src="/images/download.png" alt="Descargar CV">
+                        </a>
+                    </li>
                     <li><a href="/">
                         <span class="language language-current">MX</span>
                     </a></li>
